# DeIT-for-alcohol-consumption-detection

./: CMakeLists.txt  LICENSE  README.md  model.ipynb
models/: binary_class_model.ipynb  binary_model.ipynb  multi_class_model.ipynb
src/: main.cpp
